tests/snapshots/parser__blocks__block_with_blank_lines.snap
---
source: tests/parser.rs
expression: "parse(\"{\\n\\nvar x = 1\\n\\n}\")"
---
Ok(
    [
        Block {
            stmts: [
                Var {
                    name: "x",
                    value: Int(
                        1,
                        Span {
                            start: 11,
                            end: 12,
                        },
                    ),
                    span: Span {
                        start: 3,
                        end: 12,
                    },
                },
            ],
            span: Span {
                start: 0,
                end: 15,
            },
        },
    ],
)
