tests/snapshots/parser__blocks__block_with_multiple_stmts.snap
---
source: tests/parser.rs
expression: "parse(\"{ var x = 1\\n print(x) }\")"
---
Ok(
    [
        Block {
            stmts: [
                Var {
                    name: "x",
                    value: Int(
                        1,
                        Span {
                            start: 10,
                            end: 11,
                        },
                    ),
                    span: Span {
                        start: 2,
                        end: 11,
                    },
                },
                Expr(
                    Call {
                        callee: Identifier(
                            "print",
                            Span {
                                start: 13,
                                end: 18,
                            },
                        ),
                        args: [
                            Identifier(
                                "x",
                                Span {
                                    start: 19,
                                    end: 20,
                                },
                            ),
                        ],
                        span: Span {
                            start: 13,
                            end: 21,
                        },
                    },
                ),
            ],
            span: Span {
                start: 0,
                end: 23,
            },
        },
    ],
)
