tests/snapshots/parser__blocks__empty_block.snap
---
source: tests/parser.rs
expression: "parse(\"{}\")"
---
Ok(
    [
        Expr(
            Object {
                entries: [],
                span: Span {
                    start: 0,
                    end: 2,
                },
            },
        ),
    ],
)
