tests/snapshots/parser__blocks__nested_blocks.snap
---
source: tests/parser.rs
expression: "parse(\"{ { var x = 1 } }\")"
---
Ok(
    [
        Block {
            stmts: [
                Block {
                    stmts: [
                        Var {
                            name: "x",
                            value: Int(
                                1,
                                Span {
                                    start: 12,
                                    end: 13,
                                },
                            ),
                            span: Span {
                                start: 4,
                                end: 13,
                            },
                        },
                    ],
                    span: Span {
                        start: 2,
                        end: 15,
                    },
                },
            ],
            span: Span {
                start: 0,
                end: 17,
            },
        },
    ],
)
